# async-rocket-example

./: Cargo.toml  README.md  Rocket.toml  create_table.sql  postgres.sh  requester.http
.cargo/: config.toml
src/: errors.rs  lib.rs  models.rs  routing.rs
src/db/: mod.rs  models.rs
