[package]
name = "async-rocket-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = "0.4.31"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
sqlx = { version = "0.7.3", features = [
  "chrono",
  "macros",
  "uuid",
], default-features = false }
thiserror = "1.0.51"
validator = { version = "0.16.1", features = ["derive"] }
